--- a/ws/src/main/resources/application.yaml
+++ b/ws/src/main/resources/application.yaml
@@ -1,3 +1,7 @@
 spring:
   datasource:
-    generate-unique-name: false
+    url: jdbc:h2:./devdb
+    username: sa
+  jpa:
+    hibernate:
+      ddl-auto: update
