add UniqueUsername spring

--- a/ws/src/main/resources/application.yaml
+++ b/ws/src/main/resources/application.yaml
@@ -5,3 +5,11 @@
 #  jpa:
 #    hibernate:
 #      ddl-auto: update
+
+spring:
+ jpa:
+   properties:
+      javax:
+       persistence:
+        validation:
+         mode: none
