add authentication error message

--- a/ws/src/main/resources/application.yaml
+++ b/ws/src/main/resources/application.yaml
@@ -13,3 +13,7 @@ spring:
        persistence:
         validation:
          mode: none
+         
+logging:
+  level:
+    '[org.springframework]': debug
