modified errorhandler , err message common solution

--- a/ws/src/main/resources/application.yaml
+++ b/ws/src/main/resources/application.yaml
@@ -13,7 +13,12 @@ spring:
        persistence:
         validation:
          mode: none
+   
+ main:
+  allow-bean-definition-overriding: true
          
 logging:
   level:
     '[org.springframework]': debug
+    
+   
